# agentic-engineering

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.coolify.yml  pyproject.toml  temporal-feature-flow.html
.github/workflows/: ci.yml
cli/: run.py  trace.py
coolify/: .gitignore  .terraform.lock.hcl  README.md  main.tf  providers.tf  versions.tf
docs/: COOLIFY.md  contributing.md  handoff-slack-gates.md  reference.md  walkthrough-dark-mode.md
docs/walkthrough-dark-mode/: prd-final.md
evals/: calibrate.py  harness.py  judge.py  run.py
evals/architect_plan_stories/: cases.jsonl
evals/architect_review_prd/: cases.jsonl
evals/consumer_researcher/: cases.jsonl
evals/council_cx/: cases.jsonl
evals/council_engineering/: cases.jsonl
evals/council_legal/: cases.jsonl
evals/council_sales/: cases.jsonl
evals/pm_draft_brief/: cases.jsonl
evals/pm_prioritize_bug/: cases.jsonl
evals/pm_revise_prd/: cases.jsonl
evals/triage/: cases.jsonl
infra/: Dockerfile  entrypoint.sh
orchestrator/: intake.py  intake_http.py
runs/: README.md
tests/: helpers.py  mock_activities.py  test_agents.py  test_budget_gate.py  test_bug.py  test_coding_activities.py  test_coding_budget_gate.py  test_coding_orchestrator.py  test_coding_pod.py  test_container_agent.py  test_evals.py  test_feature_request.py  test_gate_notices.py  test_humanio.py  test_intake_http.py  test_invariants.py  test_progress_notices.py  test_replay.py  test_sandbox_isolation.py  test_screenshots.py  test_serialization.py  test_timers.py
worker/: main.py
(+87 files in other folders)
