[project]
name = "agentic-org"
version = "0.1.0"
description = "A project-agnostic product/engineering organization built from autonomous agents, orchestrated with Temporal."
requires-python = ">=3.11"  # StrEnum (see shared/types.py — temporalio converter safety)
dependencies = [
    "temporalio>=1.28",
    "pydantic>=2",
    # The reasoning plane runs on the Vercel AI Gateway (its OpenAI-compatible endpoint),
    # so the openai SDK is a core dependency — there is no alternate reasoning provider.
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
# Claude Agent SDK — the M4 engineering-pod runtime, and an optional reasoning provider
# that runs on a Claude subscription's monthly Agent SDK credit (shells out to `claude`).
agent-sdk = [
    "claude-agent-sdk>=0.2",
]
# Slack human gates (M5, D1) — only the live notifier (ORG_SLACK=1) and the Socket Mode
# listener import it, lazily; the stub/$0 path and the test suite never need it, so it's
# an extra rather than a core dep (mirrors agent-sdk).
slack = [
    "slack_sdk>=3.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# The org's own package layout. The target *project* the org operates on is data
# (a Project Profile under orchestrator/projects), never code that lives here.
[tool.setuptools.packages.find]
include = ["orchestrator*", "worker*", "cli*"]
